Text alterations and clean-up.

--- a/AFAapp/Views/Home/Index.cshtml
+++ b/AFAapp/Views/Home/Index.cshtml
@@ -23,57 +23,60 @@
 
 <body>
     @*mb-5 bg-warning*@
-    <div class="row-fluid" >
+    <div class="row-fluid">
         <div class="span6 column" style="padding-right: 1%">
-            <h3> Input AFA </h3>
+            <h3> Input </h3>
 
-            @*<div class="instructions">*@
-                <p align="justify">
-                    Enter an AFA and an input word below or click <strong>Generate example AFA</strong> to have the app generate an example for you.
-                    Next, click <strong>Run</strong> to display the computation. For detailed instructions on how to use the application see ref. For the relevant background on alternating finite automata please visit ref.
-                    Please follow the instructions below.
-                                <ul>
-                                    <li>
-                                        All fields must be filled before submitting the form. Use the dedicated buttons to add states/letters and the "x" buttons to remove states/letters. 
-                                    </li>
-                                    <li>
-                                        Use a single character for each letter.
-                                    </li>
-                                    <li>
-                                        The initial state must be a single state, not a formula.
-                                    </li>
-                                    <li>
-                                        Use the keywords "and", "or", "not" for logical conjuction, disjuction and negation respectively.
-                                    </li>
-                                    <li>
-                                        The different components of a formula must be separated with a single space character. For example, "q0 and not q1" rather than "q0andnotq1". 
-                                    </li>
-                                    <li>
-                                        Check the box next to a state to indicate that it is a final state.
-                                    </li>
-                                    @*<li>
-                                        If you would like to use subscripts for the states and appear as such, enclose them in dollar signs ($) and use underscore (_). For example, instead of "q0 and not q1" enter "\$q_0\$ and not \$q_1\$".
-                                    </li>*@
-                                </ul>
-                </p>
+            <p align="justify">
+                Enter an AFA and an input word below or click <strong>Generate example</strong> to have the app generate an example for you.
+                Next, click <strong>Run</strong> to display the computation. For the relevant background on alternating finite automata please visit the <a asp-controller="Home" asp-action="Tutorial">tutorial page</a>.
+                
+                Before using the app, please read the instructions below.
+                <ul>
+                    <li>
+                        All fields must be filled before submitting the form. Use the dedicated buttons to add states/letters and the "x" buttons to remove states/letters.
+                    </li>
+                    <li>
+                        Use a single character for each letter.
+                    </li>
+                    <li>
+                        The initial state must be a single state, not a formula.
+                    </li>
+                    <li>
+                        Use the keywords "and", "or", "not" for logical conjuction, disjuction and negation respectively.
+                    </li>
+                    <li>
+                        The different components of a formula must be separated with a single space character. For example, "q0 and not q1" rather than "q0andnotq1".
+                    </li>
+                    <li>
+                        Use the keyword "empty" as input word to check if the empty word is accepted.
+                    </li>
+                    <li>
+                        To indicate that a state is a final state, check the box next to it.
+                    </li>
 
-            @*</div>*@
-
-            <br/>
-            <p>
-                <button id="generateExample" class="btn btn-info">Generate example AFA</button>
+                    @*<li>
+                If you would like to use subscripts for the states and appear as such, enclose them in dollar signs ($) and use underscore (_). For example, instead of "q0 and not q1" enter "\$q_0\$ and not \$q_1\$".
+            </li>*@
+                </ul>
             </p>
 
             <br />
+            @*<p>
+                    <button id="generateExample" class="btn btn-info">Generate example</button>
+                </p>*@
 
             <form asp-controller="Home" asp-action="Tree5" method="post" id="form">
 
                 <div class="form-group">
-                    <div class="row">
-                        <div class="col">
-                            <input type="text" class="form-control" placeholder="Initial State" id="initialState" name="initialState" required>
-                        </div>
-                        <div class="col">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-3">
+                                <button id="generateExample" class="btn btn-info" style="width: 100%; height: 100%; padding:0 ">Generate example</button>
+                            </div>
+                            <div class="col-3">
+                                <input type="text" class="form-control" style="width: 100%; height: 100%" placeholder="Initial State" id="initialState" name="initialState" required>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -98,7 +101,7 @@
                                 <th class=" text-center align-middle">Transition Function</th>
 
                                 <th class="text-center" id="headCell">
-                                    <input class="form-control"id="letter1" placeholder="letter" type="text" name="letters" required>
+                                    <input class="form-control" id="letter1" placeholder="letter" type="text" name="letters" required>
                                 </th>
 
                                 <th>
@@ -182,20 +185,20 @@
 
 
     <div class="row-fluid">
-        
+
         <div class="span6 column" style="padding-left: 1%">
             <h3> Computation </h3>
             <p align="justify">
                 This is the output section of the application. In the computation tree, the root is the initial state and each
                 "row"  is a step in the computation.  In each node, the letter consumed by the automaton appers in parenthesis and the bolded parts
-                denote the newly activated states in each step. The unbolded parts are the connectives preserved from previous steps.
+                denote the newly activated states in each step. The unbolded parts are the logical connectives preserved from previous steps.
             </p>
             <div class="d-flex flex-column justify-content-center" id="computationArea">
 
             </div>
             @*<partial name="Tree.cshtml" />*@
         </div>
-        </div>
+    </div>
 
 
 </body>
