--- a/AFAapp/Views/Shared/_Layout.cshtml
+++ b/AFAapp/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - AFAapp</title>
+    <title>@ViewData["Title"] - Alternating Finite Automata</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -11,7 +11,7 @@
     <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-info border-bottom box-shadow mb-3">
                 <div class="container-fluid" style="margin:0; padding: 0">
-                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Alternating Finite Automata</a>
+                    <a class="navbar-brand">Alternating Finite Automata</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -37,36 +37,6 @@
         </header>
 
 
-    <!--<header>
-
-        <nav class="navbar navbar-expand navbar-dark bg-info">
-            <div class="container-fluid">
-
-                <a class="navbar-brand mr-auto" asp-controller="Home" asp-action="Index">Alternating Finite Automata</a>--> @* the last part changes the navbar title*@
-
-            <!--</div>
-
-                <ul class="navbar-nav flex-grow-1 mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-light" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-light" asp-controller="Home" asp-action="Tutorial">Tutorial</a>
-                    </li>
-
-                </ul>
-                </div>
-
-        </nav>
-
-
-    </header>-->
-
-
     <div class="container-fluid">
 
         <main role="main" class="pb-3">
@@ -77,7 +47,7 @@
 
     <footer class="border-top footer bg-info ">
         <div class="container-fluid">
-            &copy; 2021 - AFAapp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - Alternating Finite Automata - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
 
